chapters/chapter11/sidecar-workload-specific.yaml
## Not used in the book, left as reference
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: sleep-sidecar
  namespace: istioinaction
spec:
  egress:
  - hosts:
    - "istio-system/*"
    - "istioinaction/catalog.istioinaction.svc.cluster.local"
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
